--- a/projectFUN/drawing/templates/login.html
+++ b/projectFUN/drawing/templates/login.html
@@ -4,7 +4,7 @@
     <title>Log In menu</title>
 </head>
 <body>
-<form action="/fact/" method="POST">
+<form action="" method="POST">
      {% csrf_token %} 
     <label>Enter your username:</label>
     <input type="text" name="username"/>
