Working Lobby + timer

--- a/projectFUN/drawing/templates/room.html
+++ b/projectFUN/drawing/templates/room.html
@@ -18,6 +18,14 @@
 
 <body style="height: 100%">
 <!-- CHANGE WIDTH AND HEIGHT TO CSS -->
+<div class="panel panel-default">
+    <div class='panel-body'>
+        <h1 align="center">
+            <span class="label label-default">{{ topic }}</span>
+            <spand id="timer" style='padding-left: 10px;'></span>
+        </h1>
+    </div>
+</div>
 <div class="my-container">
 		<div class="tools">
 			<a href="#simple_sketch" data-download="png" style="float: right; width: 100px;">Download</a>
