Add templates for login

--- a/projectFUN/login_form/templates/register.html
+++ b/projectFUN/login_form/templates/register.html
@@ -1,7 +1,24 @@
-{% load crispy_forms_tags %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Start</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<form method="POST", action="">
-    {% csrf_token %}
-    {{ form| crispy }}
-    <input type="submit" value="Submit" />
-</form>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</head>
+
+<body>
+<div  class="container">
+    <form class="form-signin" action="" method="POST">
+        {% csrf_token %} 
+        <center><h2 class="form-signin-heading">Please sign up</h2></center>
+        {{ form }}
+        <input type="submit" class="btn btn-lg btn-primary btn-block" value="LogIn">
+    </form>
+</div>
+</body>
+</html>
