--- a/projectFUN/drawing/templates/room.html
+++ b/projectFUN/drawing/templates/room.html
@@ -44,7 +44,7 @@
 		</div>
 		
 
-        <canvas id="simple_sketch" width="600" height="600"></canvas>
+        <canvas id="simple_sketch" style="border: solid;" width="600" height="600"></canvas>
 		
 
     {% endif %}
